Remove any dependent CPKs from CorDapp's .cpk file, and replace with just their Bundle-SymbolicName,Bundle-Version pairs.