@@ -60,6 +60,8 @@ allprojects {
                     '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
                     '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
                     '--add-opens', 'java.base/java.util=ALL-UNNAMED',
+                    '--add-opens', 'java.base/java.util.jar=ALL-UNNAMED',
+                    '--add-opens', 'java.base/java.util.zip=ALL-UNNAMED',
                     '--add-opens', 'java.base/sun.nio.fs=ALL-UNNAMED',
                     '--illegal-access=warn'
         }
